syntax = "proto3";

package event;
option go_package = "./;event_pb";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";


service EventService {
  rpc CreateEvent(CreateEventRequest) returns (Event);
  rpc UpdateEvent(UpdateEventRequest) returns (Event);
  rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse);
  rpc ListEventsByDay(ListEventsRequest) returns (ListEventsResponse);
  rpc ListEventsByWeek(ListEventsRequest) returns (ListEventsResponse);
  rpc ListEventsByMonth(ListEventsRequest) returns (ListEventsResponse);
}

message Event {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp date = 3;
  google.protobuf.Duration duration = 4;
  string description = 5;
  int64 user_id = 6;
  google.protobuf.Duration notification_interval = 7;
}

message CreateEventRequest {
  Event event = 1;
}

message UpdateEventRequest {
  string id = 1;
  Event event = 2;
}

message DeleteEventRequest {
  string id = 1;
}

message DeleteEventResponse {
  bool success = 1;
}

message ListEventsRequest {
  google.protobuf.Timestamp date = 1;
}

message ListEventsResponse {
  repeated Event events = 1;
}
